2010-04-09  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        [chromium] DRT compile fix on win/linux
        https://bugs.webkit.org/show_bug.cgi?id=37314

        Looks like this was missed when upstreaming.

        * DumpRenderTree/chromium/EventSender.cpp:
        (applyKeyModifier):

Canonical link: https://commits.webkit.org/48684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57395 268f45cc-cd09-0410-ab3c-d52691b4dbfc